[package]
name = "granate"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
validator = { version = "0.18", features = ["derive"] }
async-trait = "0.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
aws-sdk-s3 = "1"
axum-extra = { version = "0.12.6", features = ["multipart"] }

[dev-dependencies]
tokio-test = "0.4"
